src/src/F2LPLexer.cpp
/* Generated by re2c 0.16 on Wed Nov 30 03:18:05 2016 */
#line 1 "src/src/F2LPLexer.re"
#include "F2LPLexer.h"
#include "exceptions/syntax_exception.h"

int F2LPLexer::Tokenize(const char * YYCURSOR, int len , lexeme_t* lexeme)
{

 	if (lexeme->current >= (YYCURSOR + len)) {
        return 0;
    }
    lexeme->start = lexeme->current;

    const char * YYMARKER;
	
	// #define YYCTYPE		char
	// #define YYFILL(n)	{}
 //    #define YYLIMIT		YYCURSOR+len
    #define YYCURSOR 	lexeme->current

	
#line 23 "<stdout>"
{
	YYCTYPE yych;
	unsigned int yyaccept = 0;
	if ((YYLIMIT - YYCURSOR) < 6) YYFILL(6);
	yych = *YYCURSOR;
	switch (yych) {
	case 0x00:	goto yy2;
	case '\t':
	case '\v':
	case '\f':
	case ' ':	goto yy6;
	case '\n':	goto yy8;
	case '#':	goto yy10;
	case '&':	goto yy11;
	case '(':	goto yy13;
	case ')':	goto yy15;
	case ',':	goto yy17;
	case '-':	goto yy19;
	case '.':	goto yy20;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy22;
	case ':':	goto yy25;
	case ';':	goto yy27;
	case '<':	goto yy29;
	case '=':	goto yy30;
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy32;
	case 'N':	goto yy35;
	case 'n':	goto yy36;
	case '{':	goto yy37;
	case '}':	goto yy39;
	default:	goto yy4;
	}
yy2:
	++YYCURSOR;
#line 24 "src/src/F2LPLexer.re"
	{ return 0; }
#line 117 "<stdout>"
yy4:
	++YYCURSOR;
yy5:
#line 58 "src/src/F2LPLexer.re"
	{
									std::string str(--lexeme->current,0,1);
									throw syntax_exception("Syntax Error - Unexpected "+ str +"\n");
								}
#line 126 "<stdout>"
yy6:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '\t':
	case '\v':
	case '\f':
	case ' ':	goto yy41;
	case '|':	goto yy44;
	default:	goto yy7;
	}
yy7:
#line 56 "src/src/F2LPLexer.re"
	{ return -1; }
#line 141 "<stdout>"
yy8:
	++YYCURSOR;
#line 57 "src/src/F2LPLexer.re"
	{ return MVSM_PARSE_TOKEN_NEWLINE; }
#line 146 "<stdout>"
yy10:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'c':	goto yy45;
	case 's':	goto yy46;
	default:	goto yy5;
	}
yy11:
	++YYCURSOR;
#line 37 "src/src/F2LPLexer.re"
	{ return MVSM_PARSE_TOKEN_CONJUNCTION; }
#line 159 "<stdout>"
yy13:
	++YYCURSOR;
#line 34 "src/src/F2LPLexer.re"
	{ return MVSM_PARSE_TOKEN_LBRACKET; }
#line 164 "<stdout>"
yy15:
	++YYCURSOR;
#line 35 "src/src/F2LPLexer.re"
	{ return MVSM_PARSE_TOKEN_RBRACKET; }
#line 169 "<stdout>"
yy17:
	++YYCURSOR;
#line 36 "src/src/F2LPLexer.re"
	{ return MVSM_PARSE_TOKEN_COMMA; }
#line 174 "<stdout>"
yy19:
	yych = *++YYCURSOR;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy22;
	default:	goto yy5;
	}
yy20:
	++YYCURSOR;
#line 23 "src/src/F2LPLexer.re"
	{ return MVSM_PARSE_TOKEN_DOT; }
#line 194 "<stdout>"
yy22:
	yyaccept = 2;
	YYMARKER = ++YYCURSOR;
	if ((YYLIMIT - YYCURSOR) < 2) YYFILL(2);
	yych = *YYCURSOR;
	switch (yych) {
	case '.':	goto yy47;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy22;
	default:	goto yy24;
	}
yy24:
#line 26 "src/src/F2LPLexer.re"
	{ return MVSM_PARSE_TOKEN_NUMBER; }
#line 217 "<stdout>"
yy25:
	yyaccept = 3;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '-':	goto yy48;
	default:	goto yy26;
	}
yy26:
#line 54 "src/src/F2LPLexer.re"
	{ return MVSM_PARSE_TOKEN_COLON; }
#line 228 "<stdout>"
yy27:
	++YYCURSOR;
#line 52 "src/src/F2LPLexer.re"
	{ return MVSM_PARSE_TOKEN_SEMI_COLON;}
#line 233 "<stdout>"
yy29:
	yych = *++YYCURSOR;
	switch (yych) {
	case '-':	goto yy50;
	default:	goto yy5;
	}
yy30:
	++YYCURSOR;
	switch ((yych = *YYCURSOR)) {
	case '>':	goto yy52;
	default:	goto yy31;
	}
yy31:
#line 33 "src/src/F2LPLexer.re"
	{ return MVSM_PARSE_TOKEN_EQUAL; }
#line 249 "<stdout>"
yy32:
	++YYCURSOR;
	if (YYLIMIT <= YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
yy33:
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy32;
	default:	goto yy34;
	}
yy34:
#line 28 "src/src/F2LPLexer.re"
	{ return MVSM_PARSE_TOKEN_STRING; }
#line 323 "<stdout>"
yy35:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'O':	goto yy54;
	default:	goto yy33;
	}
yy36:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'o':	goto yy55;
	default:	goto yy33;
	}
yy37:
	++YYCURSOR;
#line 32 "src/src/F2LPLexer.re"
	{ return MVSM_PARSE_TOKEN_LPAREN; }
#line 340 "<stdout>"
yy39:
	++YYCURSOR;
#line 31 "src/src/F2LPLexer.re"
	{ return MVSM_PARSE_TOKEN_RPAREN; }
#line 345 "<stdout>"
yy41:
	++YYCURSOR;
	if ((YYLIMIT - YYCURSOR) < 2) YYFILL(2);
	yych = *YYCURSOR;
	switch (yych) {
	case '\t':
	case '\v':
	case '\f':
	case ' ':	goto yy41;
	case '|':	goto yy44;
	default:	goto yy43;
	}
yy43:
	YYCURSOR = YYMARKER;
	switch (yyaccept) {
	case 0: 	goto yy7;
	case 1: 	goto yy5;
	case 2: 	goto yy24;
	default:	goto yy26;
	}
yy44:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\t':
	case '\v':
	case '\f':
	case ' ':	goto yy56;
	default:	goto yy43;
	}
yy45:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'o':	goto yy59;
	default:	goto yy43;
	}
yy46:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'u':	goto yy60;
	default:	goto yy43;
	}
yy47:
	yych = *++YYCURSOR;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy61;
	default:	goto yy43;
	}
yy48:
	++YYCURSOR;
	if ((YYLIMIT - YYCURSOR) < 9) YYFILL(9);
	yych = *YYCURSOR;
	switch (yych) {
	case '\t':
	case '\v':
	case '\f':
	case ' ':	goto yy48;
	case 'c':	goto yy63;
	case 'o':	goto yy64;
	case 's':	goto yy65;
	default:	goto yy43;
	}
yy50:
	++YYCURSOR;
#line 30 "src/src/F2LPLexer.re"
	{ return MVSM_PARSE_TOKEN_REVERSE_IMPLICATION; }
#line 420 "<stdout>"
yy52:
	++YYCURSOR;
#line 29 "src/src/F2LPLexer.re"
	{ return MVSM_PARSE_TOKEN_IMPLICATION; }
#line 425 "<stdout>"
yy54:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'T':	goto yy66;
	default:	goto yy33;
	}
yy55:
	yych = *++YYCURSOR;
	switch (yych) {
	case 't':	goto yy66;
	default:	goto yy33;
	}
yy56:
	++YYCURSOR;
	if (YYLIMIT <= YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	switch (yych) {
	case '\t':
	case '\v':
	case '\f':
	case ' ':	goto yy56;
	default:	goto yy58;
	}
yy58:
#line 40 "src/src/F2LPLexer.re"
	{
									while(*(lexeme->start) != 'v') lexeme->start++;
									while(*(lexeme->current) != 'v') lexeme->current--;
									lexeme->current++; 
									return MVSM_PARSE_TOKEN_DISJUNCTION;
								}
#line 457 "<stdout>"
yy59:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'u':	goto yy68;
	default:	goto yy43;
	}
yy60:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'm':	goto yy69;
	default:	goto yy43;
	}
yy61:
	++YYCURSOR;
	if (YYLIMIT <= YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy61;
	default:	goto yy24;
	}
yy63:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'o':	goto yy71;
	default:	goto yy43;
	}
yy64:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'b':	goto yy72;
	default:	goto yy43;
	}
yy65:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'o':	goto yy73;
	default:	goto yy43;
	}
yy66:
	++YYCURSOR;
	switch ((yych = *YYCURSOR)) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy32;
	default:	goto yy67;
	}
yy67:
#line 27 "src/src/F2LPLexer.re"
	{ return MVSM_PARSE_TOKEN_NEGATION;}
#line 575 "<stdout>"
yy68:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'n':	goto yy74;
	default:	goto yy43;
	}
yy69:
	++YYCURSOR;
#line 39 "src/src/F2LPLexer.re"
	{ return MVSM_PARSE_TOKEN_SUM;}
#line 586 "<stdout>"
yy71:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'n':	goto yy75;
	default:	goto yy43;
	}
yy72:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'j':	goto yy76;
	default:	goto yy43;
	}
yy73:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'r':	goto yy77;
	default:	goto yy43;
	}
yy74:
	yych = *++YYCURSOR;
	switch (yych) {
	case 't':	goto yy78;
	default:	goto yy43;
	}
yy75:
	yych = *++YYCURSOR;
	switch (yych) {
	case 's':	goto yy80;
	default:	goto yy43;
	}
yy76:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'e':	goto yy81;
	default:	goto yy43;
	}
yy77:
	yych = *++YYCURSOR;
	switch (yych) {
	case 't':	goto yy82;
	default:	goto yy43;
	}
yy78:
	++YYCURSOR;
#line 38 "src/src/F2LPLexer.re"
	{ return MVSM_PARSE_TOKEN_COUNT;}
#line 633 "<stdout>"
yy80:
	yych = *++YYCURSOR;
	switch (yych) {
	case 't':	goto yy83;
	default:	goto yy43;
	}
yy81:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'c':	goto yy84;
	default:	goto yy43;
	}
yy82:
	yych = *++YYCURSOR;
	switch (yych) {
	case 's':	goto yy85;
	default:	goto yy43;
	}
yy83:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'a':	goto yy87;
	default:	goto yy43;
	}
yy84:
	yych = *++YYCURSOR;
	switch (yych) {
	case 't':	goto yy88;
	default:	goto yy43;
	}
yy85:
	++YYCURSOR;
#line 48 "src/src/F2LPLexer.re"
	{ return MVSM_PARSE_TOKEN_SORTS;}
#line 668 "<stdout>"
yy87:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'n':	goto yy89;
	default:	goto yy43;
	}
yy88:
	yych = *++YYCURSOR;
	switch (yych) {
	case 's':	goto yy90;
	default:	goto yy43;
	}
yy89:
	yych = *++YYCURSOR;
	switch (yych) {
	case 't':	goto yy92;
	default:	goto yy43;
	}
yy90:
	++YYCURSOR;
#line 49 "src/src/F2LPLexer.re"
	{ return MVSM_PARSE_TOKEN_OBJECTS;}
#line 691 "<stdout>"
yy92:
	yych = *++YYCURSOR;
	switch (yych) {
	case 's':	goto yy93;
	default:	goto yy43;
	}
yy93:
	++YYCURSOR;
#line 50 "src/src/F2LPLexer.re"
	{ return MVSM_PARSE_TOKEN_CONSTANTS;}
#line 702 "<stdout>"
}
#line 63 "src/src/F2LPLexer.re"


}